--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,6 +1,4 @@
 .page {
-  min-width: 320px;
-  max-width: 1280px;
-  margin: 0 auto;
-  box-sizing: border-box;
+  background-color: black;
+  font-family: 'Inter', 'Arial', sans-serif;
 }
